Changing image paths so that the Github pages doesnt explode

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <!-- Hidden section (appears on expand) -->
             <div class="language-section">
-                <button class="back-btn"><img src="/icons/left-arrow.svg"></button>
+                <button class="back-btn"><img src="icons/left-arrow.svg"></button>
                 <div class="files-list"></div>
                 <div class="file-information">
                     <div class="file-header">
